# land_yacht

./: .travis.rosinstall  README.md  landyacht-motor.parm  landyacht_params_v14_motor_stick_sail.param
config/: caswell_landyacht_mission_1.txt  gazebo_landyacht_v01.parm  land_yacht_downwind_slalom_for_heel_controller.waypoints  land_yacht_upwind_slalom_for_wingsail_heel_controller.waypoints  sim_landyacht_wingsail.param
land_yacht_gazebo/: CMakeLists.txt  package.xml
land_yacht_gazebo/config/: land_yacht.param  land_yacht_caswell.waypoints  land_yacht_mainsail.param  land_yacht_upwind_downwind_slalom.waypoints  land_yacht_windward_triangle_for_tacking.waypoints  land_yacht_wingsail.param  land_yacht_wingsail_dd.param  land_yacht_wingsail_with_elevator.param  landyacht_wingsail.param  landyacht_wingsail_dd.param
land_yacht_gazebo/launch/: wingsail_test_world.launch
land_yacht_gazebo/models/land_yacht/: model.config  model.sdf
land_yacht_gazebo/models/land_yacht/materials/scripts/: sand.material
land_yacht_gazebo/models/land_yacht/meshes/: land_yacht_base.stl  motor_mount_and_motor_v2.stl  wing_sail_elevator.stl
land_yacht_gazebo/models/land_yacht_base/: model.config  model.sdf
land_yacht_gazebo/models/land_yacht_base/meshes/: land_yacht_forks_v4.dae  land_yacht_forks_v4.stl  motor_mount_v2.stl  motor_t3543-05.stl  sand_wheel.dae  sand_wheel.stl  steering_assembly_v3.stl
land_yacht_gazebo/models/land_yacht_main_sail/: model.config  model.sdf
land_yacht_gazebo/models/land_yacht_main_sail/meshes/: land_yacht_flat_sail.stl  land_yacht_rig_and_sail.stl
land_yacht_gazebo/models/land_yacht_wing_sail/: model.config  model.sdf
land_yacht_gazebo/models/land_yacht_wing_sail_with_elevator/: model.config  model.sdf
land_yacht_gazebo/models/main_sail_ly01/: model.config  model.sdf
land_yacht_gazebo/models/main_sail_ly01/meshes/: land_yacht_rig.stl  land_yacht_sail_#1_v1.stl
land_yacht_gazebo/models/wing_sail/: model.config  model.sdf
land_yacht_gazebo/models/wing_sail_naca0018_1.4m/: model.config  model.sdf
land_yacht_gazebo/models/wing_sail_naca0018_1.4m/meshes/: wing_sail.stl
land_yacht_gazebo/models/wing_sail_naca0018_1.4m_with_elevator/: model.config  model.sdf
land_yacht_gazebo/models/wing_sail_with_elevator/: model.config  model.sdf
land_yacht_gazebo/scripts/: wing_sail_state.py
land_yacht_gazebo/worlds/: beach.sdf  beach.world  caswell_v2.dae  land_yacht_beach.sdf  land_yacht_wing_sail_beach.sdf  land_yacht_wing_sail_with_elevator_beach.sdf  mcmillian_airfield.world  sails_test.sdf  test_main_sail.sdf  test_sails.sdf  wingsail.sdf  wingsail_test.world
land_yacht_gazebo_plugins/: CMakeLists.txt  package.xml
