<?xml version="1.0"?>
<package format="2">
    <name>land_yacht_gazebo</name>
    <version>0.1.0</version>
    <description>Gazebo simulation model and launch files for a land yacht</description>
    <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
    <license>GPLv3</license>
    <url type="website">https://github.com/srmainwaring/land_yacht</url>
    <url type="repository">https://github.com/srmainwaring/land_yacht</url>
    <url type="bugtracker">https://github.com/srmainwaring/land_yacht/issues</url>
    <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>

    <exec_depend>asv_sim_gazebo</exec_depend>
    <exec_depend>asv_sim_gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>roslaunch</exec_depend>

    <export>
      <gazebo_ros gazebo_model_path="${prefix}/models" />
    </export>
</package>
